# minauto

./: .gitmodules  Automaton.cpp  BLAS.cpp  BLAS.hpp  CMakeLists.txt  EquivAlgorithms.hpp  GramSchmidt.hpp  Inflate.hpp  Minimisation.hpp  README.md  RandomValueMap.cpp  Timer.cpp  Util.cpp  Util.hpp  WordTree.cpp  Worklist.hpp  main.cpp  mpreal_interval.hpp
.github/workflows/: c-cpp.yml
include/minauto/: Automaton.hpp  BLAS.hpp  GramSchmidt.hpp  Minimisation.hpp  Mutate.hpp  RandomValueMap.hpp  RandomisedEquiv.hpp  Timer.hpp  WordTree.hpp  Worklist.hpp  mpreal_interval.hpp
include/old/: mpreal.h
source/: Automaton.cpp  BLAS.cpp  Makefile  RandomValueMap.cpp  Timer.cpp  Util.cpp  WordTree.cpp  example.cpp  main.cpp
source/old/: mpreal.cpp
